--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ outcome==1.3.0.post0
 packaging==24.2
 pillow==11.1.0
 pluggy==1.5.0
+psycopg2==2.9.10
 pycparser==2.22
 PySocks==1.7.1
 pytest==8.3.4
