--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
+      - ./data/web/media:/data/web/media
     env_file:
       - ./dotenv_files/.env
     networks:
