--- a/dotenv_files/.env-example
+++ b/dotenv_files/.env-example
@@ -1,6 +1,11 @@
 # Secret key django
 SECRET_KEY="change-me"
 
+DEBUG=1
+
+# Publication per page
+PER_PAGE=10
+
 # Postgres Database
 POSTGRES_DB="change-me"
 POSTGRES_USER="change-me"
