--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - ./app:/app
       - ./data/web/media:/data/web/media
+      - ./data/web/static:/data/web/static
     env_file:
       - ./dotenv_files/.env
     networks:
