--- a/dotenv_files/.env-example
+++ b/dotenv_files/.env-example
@@ -1,7 +1,9 @@
 # Secret key django
 SECRET_KEY="change-me"
 
-DEBUG=1
+DEBUG=0
+
+ALLOWED_HOSTS=127.0.0.1,localhost
 
 # Publication per page
 PER_PAGE=10
