--- a/docker-swarm.yml
+++ b/docker-swarm.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   db:
-    image: postgres
+    image: postgres:17
     volumes:
       - db_socialnet:/var/lib/postgresql/data
     env_file:
